adds landing page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Súper Bingo</title>
 </head>
 
 <body>
+    <img src="./assets/bingoImage.svg" alt="bingo">
+    <p>¿Te gustan los juegos de azar, la diversión y la emoción? ¿Quieres pasar un rato agradable con tus amigas y ganar
+        premios increíbles? ¡Entonces no te pierdas el bingo que hemos preparado para ti!</p>
+    <button><a href="">Jugar</a></button>
 
 </body>
 
