adds ranking page ⚡️

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
     <title>Súper Bingo</title>
 </head>
 
@@ -12,7 +13,11 @@
     <img src="./assets/bingoImage.svg" alt="bingo">
     <p>¿Te gustan los juegos de azar, la diversión y la emoción? ¿Quieres pasar un rato agradable con tus amigas y ganar
         premios increíbles? ¡Entonces no te pierdas el bingo que hemos preparado para ti!</p>
-    <button><a href="">Jugar</a></button>
+    <div class="button-container">
+        <a href="/game/game.html"><button class="play-button">Jugar</button></a>
+        <a href="/ranking/ranking.html"><button class="ranking-button">Ranking</button></a>
+    </div>
+
 
 </body>
 
