adds gaming board

--- a/game/game.html
+++ b/game/game.html
@@ -16,7 +16,7 @@
         <input class="player" type="text" name="player2" id="player2" placeholder="Ingresa nombre del jugador 2">
         <input class="player" type="text" name="player3" id="player3" placeholder="Ingresa nombre del jugador 3">
         <input class="player" type="text" name="player4" id="player4" placeholder="Ingresa nombre del jugador 4">
-        <input class="ready" type="button" value="Empezar">
+        <a href="/board/board.html"><input class="ready" type="button" value="Empezar"></a>
     </div>
 
 </body>
