--- a/board/board.html
+++ b/board/board.html
@@ -12,8 +12,10 @@
     <div class="container">
         <div class="bingo-card">
             <h2>Lourdes</h2>
-            <div class="number-list">
-                <div class="number">1</div>
+            <div id="number-list">
+                <number-element></number-element>
+                <fruit-list></fruit-list>
+                <!-- <div class="number">1</div>
                 <div class="number">2</div>
                 <div class="number">3</div>
                 <div class="number">4</div>
@@ -37,12 +39,12 @@
                 <div class="number">22</div>
                 <div class="number">23</div>
                 <div class="number">24</div>
-                <div class="number">25</div>
+                <div class="number">25</div> -->
             </div>
         </div>
     </div>
-
+    <script src="board.js"></script>
 </body>
-<script src="board.js"></script>
+
 
 </html>
