Adds turn counter and fix error in the max of turns

--- a/board/board.html
+++ b/board/board.html
@@ -19,7 +19,13 @@
         </div>
 
         <div class="bingo-numbers">
+            <div class="turn-container">
+                <h2 class="turns">Turno</h2>
+                <p id="turns"></p>
+            </div>
             <div class="bingo-call">
+                <h2 class="turns">Bola</h2>
+
                 <h2 id="bingo-call-number"></h2>
                 <button id="verify" onclick=bingoCall()>Sacar número</button>
             </div>
