adds size selection buttons in the form

--- a/game/game.html
+++ b/game/game.html
@@ -16,8 +16,19 @@
         <input class="player" type="text" name="player2" id="player2" placeholder="Ingresa nombre del jugador 2">
         <input class="player" type="text" name="player3" id="player3" placeholder="Ingresa nombre del jugador 3">
         <input class="player" type="text" name="player4" id="player4" placeholder="Ingresa nombre del jugador 4">
+        <div class="board-configuration">
+            <p>Tablero</p>
+            <div class="board-size">
+                <button id="3x3" class="circle-shape">3</button>
+                <button id="4x4" class="circle-shape">4</button>
+                <button id="5x5" class="circle-shape">5</button>
+                <button id="random-size" class="random">Aleatorio</button>
+            </div>
+        </div>
         <a href="/board/board.html"><input class="ready" type="button" value="Empezar"></a>
     </div>
+
+    <script src="game.js"></script>
 
 </body>
 
