--- a/board/board.html
+++ b/board/board.html
@@ -13,7 +13,22 @@
         <div class="cards">
             <div class="bingo-card">
                 <h2>Lourdes</h2>
-                <div id="number-list">
+                <div id="number-list1" data-number="1">
+                </div>
+            </div>
+            <div class="bingo-card">
+                <h2>Lourdes</h2>
+                <div id="number-list2" data-number="2">
+                </div>
+            </div>
+            <div class="bingo-card">
+                <h2>Lourdes</h2>
+                <div id="number-list3" data-number="3">
+                </div>
+            </div>
+            <div class="bingo-card">
+                <h2>Lourdes</h2>
+                <div id="number-list4" data-number="4">
                 </div>
             </div>
         </div>
