easter egg :egg:

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="/ranking/ranking.html"><button class="ranking-button">Ranking</button></a>
     </div>
 
-
+    <script src="/scripts.js"></script>
 </body>
 
 </html>
