--- a/board/board.html
+++ b/board/board.html
@@ -5,29 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="board.css">
-    <title>Board</title>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+    <title>¿Quién ganará?</title>
 </head>
 
 <body>
     <div class="container">
         <div class="cards">
-            <div class="bingo-card">
-                <h2>Lourdes</h2>
+            <div class="box">
+                <select id="player-list" onchange=display()>
+                    <option id="option1"></option>
+                    <option id="option2"></option>
+                    <option id="option3"></option>
+                    <option id="option4"></option>
+                </select>
+            </div>
+            <div id="card1" class="bingo-card">
+                <h2 id="player1"></h2>
                 <div id="number-list1" data-number="1">
                 </div>
             </div>
-            <div class="bingo-card">
-                <h2>Lourdes</h2>
+            <div id="card2" class="bingo-card display">
+                <h2 id="player2"></h2>
                 <div id="number-list2" data-number="2">
                 </div>
             </div>
-            <div class="bingo-card">
-                <h2>Lourdes</h2>
+            <div id="card3" class="bingo-card display">
+                <h2 id="player3"></h2>
                 <div id="number-list3" data-number="3">
                 </div>
             </div>
-            <div class="bingo-card">
-                <h2>Lourdes</h2>
+            <div id="card4" class="bingo-card display">
+                <h2 id="player4"></h2>
                 <div id="number-list4" data-number="4">
                 </div>
             </div>
@@ -36,14 +45,14 @@
         <div class="bingo-numbers">
             <div class="turn-container">
                 <h2 class="turns">Turno</h2>
-                <p id="turns"></p>
+                <h2 id="turns"></h2>
             </div>
             <div class="bingo-call">
                 <h2 class="turns">Bola</h2>
-
                 <h2 id="bingo-call-number"></h2>
-                <button id="verify" onclick=bingoCall()>Sacar número</button>
             </div>
+            <button id="verify" onclick=bingoCall()>Sacar número</button>
+
         </div>
 
     </div>
