adds form validation

--- a/game/game.html
+++ b/game/game.html
@@ -25,7 +25,8 @@
                 <button id="random-size" class="random click">Aleatorio</button>
             </div>
         </div>
-        <a href="/board/board.html"><input onclick=SaveData() id="send" class="ready" type="button" value="Empezar"></a>
+        <a href="/board/board.html"><input onclick=SaveData() id="send" class="button not-ready" type="submit"
+                value="Empezar"></a>
     </div>
 
     <script src="game.js"></script>
