--- a/game/game.html
+++ b/game/game.html
@@ -25,8 +25,7 @@
                 <button id="random-size" class="random click">Aleatorio</button>
             </div>
         </div>
-        <a href="/board/board.html"><input onclick=SaveData() id="send" class="button not-ready" type="submit"
-                value="Empezar"></a>
+        <a id="anchor"><input id="send" class="button not-ready" type="submit" value="Empezar"></a>
     </div>
 
     <script src="game.js"></script>
