--- a/board/board.html
+++ b/board/board.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <a href="/index.html"><img class="arrow-icon" src="/assets/arrow-back.svg" alt="arrow"></a>
+
     <div class="container">
         <div class="cards">
             <div class="box">
