Play again button and points structure

--- a/board/board.html
+++ b/board/board.html
@@ -54,6 +54,7 @@
                 <h2 id="bingo-call-number"></h2>
             </div>
             <button id="verify" onclick=bingoCall()>Sacar número</button>
+            <button id="refresh" class="display">Volver a Jugar</button>
 
         </div>
 
