--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         premios increíbles? ¡Entonces no te pierdas el bingo que hemos preparado para ti!</p>
     <div class="button-container">
         <a href="/game/game.html"><button class="play-button">Jugar</button></a>
-        <a href="/ranking/ranking.html"><button class="ranking-button">Ranking</button></a>
+        <a href="/ranking/ranking.html"><button class="ranking-button">Victorias</button></a>
     </div>
 
     <script src="/scripts.js"></script>
