--- a/ranking/ranking.html
+++ b/ranking/ranking.html
@@ -13,31 +13,31 @@
     <a href="/index.html"><img class="arrow-icon" src="/assets/arrow-back.svg" alt="arrow"></a>
 
     <div class="container">
-        <h1>Ranking de Puntajes</h1>
+        <h1>Victorias</h1>
         <div class="card">
             <img src="/assets/aunty.png" alt="profile picture" class="card-image">
             <p class="card-text name">La Tía Lola</p>
-            <p class="card-text point">50pts</p>
+            <p class="card-text point">10</p>
         </div>
         <div class="card">
             <img src="/assets/aunty.png" alt="profile picture" class="card-image">
             <p class="card-text name">La abuelita Olga</p>
-            <p class="card-text point">50pts</p>
+            <p class="card-text point">5</p>
         </div>
         <div class="card">
             <img src="/assets/aunty.png" alt="profile picture" class="card-image">
             <p class="card-text name">Tía Lola</p>
-            <p class="card-text point">50pts</p>
+            <p class="card-text point">4</p>
         </div>
         <div class="card">
             <img src="/assets/aunty.png" alt="profile picture" class="card-image">
             <p class="card-text name">Tía Lola</p>
-            <p class="card-text point">50pts</p>
+            <p class="card-text point">1</p>
         </div>
         <div class="card">
             <img src="/assets/aunty.png" alt="profile picture" class="card-image">
             <p class="card-text name">Tía Lola</p>
-            <p class="card-text point">50pts</p>
+            <p class="card-text point">1</p>
         </div>
 
     </div>
